--- a/vue_project/Dockerfile
+++ b/vue_project/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
 
 #RUN npm install -g @vue/cli
-RUN npm install @vue/cli-service
+RUN npm install -g @vue/cli-service
 RUN npm install --production
 RUN npm audit fix
 
