--- a/vue_project/Dockerfile
+++ b/vue_project/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /app
 
 COPY ["package.json", "package-lock.json*", "./"]
 
-#RUN npm install -g @vue/cli
-RUN npm install -g @vue/cli-service
+RUN npm install -g @vue/cli
+#RUN npm install -g @vue/cli-service
 RUN npm install --production
 RUN npm audit fix
 
